--- a/language/en-GB/en-GB.plg_system_socialmagick.sys.ini
+++ b/language/en-GB/en-GB.plg_system_socialmagick.sys.ini
@@ -1,2 +1,89 @@
-PLG_SYSTEM_SOCIALMAGICK="System – Open Graph Image generator"
+PLG_SYSTEM_SOCIALMAGICK="System – Social Magick"
 PLG_SYSTEM_SOCIALMAGICK_XML_DESC="Automatically generate Open Graph images for your site. Create and manage customisable templates with optional background images."
+
+;; =====================================================================================================================
+;; Plugin configuration options
+;; =====================================================================================================================
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_DEVMODE_LABEL="Development Mode"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_DEVMODE_DESC="Enable development mode to regenerate images on every page load. Disable and if an image is already created, it will not be recreated."
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEMPLATE_NAME_LABEL="Template Name (Alphanumeric)"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEMPLATE_NAME_DESC="Give a name to your template. You will see it wherever you are allowed to select an Open Graph image template (categories, menu items). Each template needs to have its own, unique template name."
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_BASE_IMAGE_LABEL="Template Image"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_BASE_IMAGE_DESC="A background image which serves as the background of your template. Anything larger than your specified dimensions will be resized and cropped to fit."
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEMPLATE_W_LABEL="Template width (in pixels)"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEMPLATE_W_DESC="The width of your Open Graph image template."
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEMPLATE_H_LABEL="Template height (in pixels)"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEMPLATE_H_DESC="The height of your Open Graph image template."
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_BASE_COLOR_LABEL="Base background color"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_BASE_COLOR_DESC="Used as the background if you have no base image specified."
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_BASE_COLOR_ALPHA_LABEL="Background color opacity"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_BASE_COLOR_ALPHA_DESC="From transparent (left) to totally opaque (right)"
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_FONT_LABEL="Font for text"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_FONT_DESC="Choose the font file for your text. Upload your font files into the <code>plugins/system/socialmagick/fonts</code> directory on your site."
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_FONT_SIZE_LABEL="Font size (in points)"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_FONT_SIZE_DESC="The font size for rendering the text in the Open Graph image."
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_COLOR_LABEL="Text color"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_COLOR_DESC="The color of the text in the Open Graph image."
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_HEIGHT_LABEL="Maximum Text Height (px)"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_HEIGHT_DESC="The rendered text in the Open Graph image will never higher than this many pixels."
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_WIDTH_LABEL="Maximum Text Width (px)"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_WIDTH_DESC="The rendered text in the Open Graph image will never wider than this many pixels."
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_ALIGN_LABEL="Text Align"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_ALIGN_DESC="Alignment for the text rendered in the Open Graph image"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_ALIGN_OPT_LEFT="Left"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_ALIGN_OPT_CENTER="Centre"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_ALIGN_OPT_RIGHT="Right"
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_Y_CENTER_LABEL="Centre text vertically?"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_Y_CENTER_DESC="Should the text be rendered centred vertically within the containment box defined by the options above?"
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_Y_ADJUST_LABEL="Adjust Position Vertically from Centre (px)"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_Y_ADJUST_DESC="Move the text down by this many pixels. To move the text up, use negative values."
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_Y_ABSOLUTE_LABEL="Adjust Position Vertically from Top (px)"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_Y_ABSOLUTE_DESC="Move the text down by this many pixels. To move the text up, use negative values."
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_X_CENTER_LABEL="Centre text horizontally?"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_X_
+_DESC="Should the text be rendered centred horizontally within the containment box defined by the options above?"
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_X_ADJUST_LABEL="Adjust Position Horizontally from Centre (px)"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_X_ADJUST_DESC="Move the text right by this many pixels. To move the text left, use negative values."
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_X_ABSOLUTE_LABEL="Adjust Position Horizontally from Left Edge (px)"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_X_ABSOLUTE_DESC="Move the text right by this many pixels. To move the text left, use negative values."
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_USE_ARTICLE_IMAGE_LABEL="Layer an image with the template?"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_USE_ARTICLE_IMAGE_DESC="Only applies to core content (articles). The image is specified in the article itself and falls back to the intro image."
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_IMAGE_Z_LABEL="Should this image go over or under the template?"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_IMAGE_Z_DESC="Note that part of the template must be transparent for the image to be able to be under."
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_IMAGE_Z_OPT_OVER="Over"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_IMAGE_Z_OPT_UNDER="Under"
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_IMAGE_COVER_LABEL="Should the image be full-width and full-height?"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_IMAGE_COVER_DESC="If enabled, anything larger than your specified dimensions will be resized and cropped to fit."
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_IMAGE_WIDTH_LABEL="Image Render Width"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_IMAGE_WIDTH_DESC="Resize the layer image to this width (in pixels)."
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_IMAGE_HEIGHT_LABEL="Image Render Height"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_IMAGE_HEIGHT_DESC="Resize the layer image to this height (in pixels)."
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_IMAGE_X_LABEL="Image Position (pixels from left edge)"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_IMAGE_X_DESC="The layer image will be rendered this many pixels from the left edge of the generated image."
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_IMAGE_Y_LABEL="Image Position (pixels from top edge)"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_IMAGE_Y_DESC="The layer image will be rendered this many pixels from the top edge of the generated image."
