--- a/language/en-GB/en-GB.plg_system_socialmagick.ini
+++ b/language/en-GB/en-GB.plg_system_socialmagick.ini
@@ -2,7 +2,7 @@
 ;; Injected forms: common
 ;; =====================================================================================================================
 PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_FIELDSET_SOCIALMAGICK_HEAD="Open Graph images"
-PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_USE_NOTES="Control whether and how Open Graph images will be generated automatically.<br/><h3 class="mt-4">Rules for determining the superimposed text</h3><p>SocialMagick will render an image with text superimposed. The source of the text is the <strong class="text-decoration-underline">first</strong> one of the following detected on the page being displayed in the frontend:</p><ul><li>Application text. Set it by running <code>Joomla\CMS\Factory\getApplication()->socialMagickText = 'your text'</code> in your view template override.</li><li>Custom text. As entered here.</li><li>Article title. Only applies to core articles (com_content).</li><li>Browser Page Title.</li></ul><p>You can disable some or all of the above items, except for the ‘Application text’, using the following options.</p><p><em>Powered by Social Magick</em></p>"
+PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_USE_NOTES="Control whether and how Open Graph images will be generated automatically.<br/><h3 class="mt-4">Rules for determining the superimposed text</h3><p>SocialMagick will render an image with text superimposed. The source of the text is the <strong class="text-decoration-underline">first</strong> one of the following detected on the page being displayed in the frontend:</p><ul><li>Application text. Set it by running <code>Joomla\CMS\Factory::getApplication()->socialMagickText = 'your text'</code> in your view template override.</li><li>Custom text. As entered here.</li><li>Article title. Only applies to core articles (com_content).</li><li>Browser Page Title.</li></ul><p>You can disable some or all of the above items, except for the ‘Application text’, using the following options.</p><p><em>Powered by Social Magick</em></p>"
 
 PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_GENERATE_IMAGES_LABEL="Generate Open Graph images"
 PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_GENERATE_IMAGES_DESC="Should I generate Open Graph images automatically?"
@@ -18,3 +18,13 @@ PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_USE_ARTICLE_DESC="Should I use the Article T
 
 PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_USE_TITLE_LABEL="Use Browser Page Title"
 PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_USE_TITLE_DESC="Should I use the Browser Page Title (see the Page Display tab) as a text source per the rules outlined on this page?"
+
+PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_IMAGE_SOURCE_LABEL="Extra image source"
+PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_IMAGE_SOURCE_DESC="Only applies to Joomla! core content categories and articles. Choose where we can look for an image to use as a layered image when generating the Open Graph image. It can be the intro or full article image, or a custom field (strongly suggested that it is of the Media type). In the latter case you also need to enter the name of the field. Use None to turn off this feature."
+PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_IMAGE_SOURCE_OPT_NONE="None"
+PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_IMAGE_SOURCE_OPT_INTRO="Intro Image"
+PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_IMAGE_SOURCE_OPT_FULLTEXT="Full Article Image"
+PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_IMAGE_SOURCE_OPT_CUSTOMFIELD="Custom Field"
+
+PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_IMAGE_FIELD_LABEL="Extra image custom field name"
+PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_IMAGE_FIELD_DESC="The Name of the custom field which holds the image file."
