--- a/language/en-GB/en-GB.plg_system_socialmagick.sys.ini
+++ b/language/en-GB/en-GB.plg_system_socialmagick.sys.ini
@@ -59,8 +59,7 @@ PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_Y_ABSOLUTE_LABEL="Adjust Position Vertically
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_Y_ABSOLUTE_DESC="Move the text down by this many pixels. To move the text up, use negative values."
 
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_X_CENTER_LABEL="Centre text horizontally?"
-PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_X_
-_DESC="Should the text be rendered centred horizontally within the containment box defined by the options above?"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_X_CENTER_DESC="Should the text be rendered centred horizontally within the containment box defined by the options above?"
 
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_X_ADJUST_LABEL="Adjust Position Horizontally from Centre (px)"
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_X_ADJUST_DESC="Move the text right by this many pixels. To move the text left, use negative values."
