Allow overriding other OG images

--- a/language/en-GB/en-GB.plg_system_socialmagick.ini
+++ b/language/en-GB/en-GB.plg_system_socialmagick.ini
@@ -28,3 +28,6 @@ PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_IMAGE_SOURCE_OPT_CUSTOMFIELD="Custom Field"
 
 PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_IMAGE_FIELD_LABEL="Extra image custom field name"
 PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_IMAGE_FIELD_DESC="The Name of the custom field which holds the image file."
+
+PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_OVERRIDE_OG_LABEL="Override other Open Graph images"
+PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_OVERRIDE_OG_DESC="Should this plugin override any Open Graph images set by any other means, e.g. other third party extensions or your template?"
