Different templates for child items gh-2
Category and article options

--- a/language/en-GB/en-GB.plg_system_socialmagick.ini
+++ b/language/en-GB/en-GB.plg_system_socialmagick.ini
@@ -1,8 +1,10 @@
 ;; =====================================================================================================================
-;; Injected forms: common
+;; Injected forms: Common (applies to menu items, categories and articles)
 ;; =====================================================================================================================
 PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_FIELDSET_SOCIALMAGICK_HEAD="Open Graph images"
 PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_USE_NOTES="Control whether and how Open Graph images will be generated automatically.<br/><h3 class="mt-4">Rules for determining the superimposed text</h3><p>SocialMagick will render an image with text superimposed. The source of the text is the <strong class="text-decoration-underline">first</strong> one of the following detected on the page being displayed in the frontend:</p><ul><li>Application text. Set it by running <code>Joomla\CMS\Factory::getApplication()->socialMagickText = 'your text'</code> in your view template override.</li><li>Custom text. As entered here.</li><li>Article title. Only applies to core articles (com_content).</li><li>Browser Page Title.</li></ul><p>You can disable some or all of the above items, except for the ‘Application text’, using the following options.</p><p><em>Powered by Social Magick</em></p>"
+
+PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_OVERRIDE_LABEL="Override menu item and parent category options"
 
 PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_GENERATE_IMAGES_LABEL="Generate Open Graph images"
 PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_GENERATE_IMAGES_DESC="Should I generate Open Graph images automatically?"
@@ -31,3 +33,17 @@ PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_IMAGE_FIELD_DESC="The Name of the custom fie
 
 PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_OVERRIDE_OG_LABEL="Override other Open Graph images"
 PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_OVERRIDE_OG_DESC="Should this plugin override any Open Graph images set by any other means, e.g. other third party extensions or your template?"
+
+;; =====================================================================================================================
+;; Injected forms: Article
+;; =====================================================================================================================
+PLG_SYSTEM_SOCIALMAGICK_FORM_ARTICLE_OVERRIDE_DESC="By default, Lucid Fox Social Magick will use the options from the menu item, the article category and the parent categories (if any exist) to determine whether and how Open Graph images will be generated. Enabling this option allows you to use different options which apply only to this article."
+
+;; =====================================================================================================================
+;; Injected forms: Category
+;; =====================================================================================================================
+PLG_SYSTEM_SOCIALMAGICK_FORM_CATEGORY_HEAD_CATEGORY="<h3>Category options</h3>"
+PLG_SYSTEM_SOCIALMAGICK_FORM_CATEGORY_OVERRIDE_DESC="By default, Lucid Fox Social Magick will use the options from the menu item and the parent categories (if any exist) to determine whether and how Open Graph images will be generated. Enabling this option allows you to use different options which apply only to this category (but <strong>not</strong> its articles) and its children categories, if any exist and unless there is an override in a child category. "
+
+PLG_SYSTEM_SOCIALMAGICK_FORM_CATEGORY_HEAD_ARTICLES="<h3>Article options</h3>"
+PLG_SYSTEM_SOCIALMAGICK_FORM_CATEGORY_ARTICLE_OVERRIDE_DESC="By default, Lucid Fox Social Magick will use the options from the menu item and the parent categories (if any exist) to determine whether and how Open Graph images will be generated. Enabling this option allows you to use different options which apply only to the articles contained in this category (but <strong>not</strong> the category itself) unless overridden in the article itself. If enabled, the options also apply to the articles in children categories of the current category, if any exist, unless overridden in the child category or the article itself."
