Use GD as an alternative to Imagick
Added options for choosing the integration, text debug mode and PNG compression level.

--- a/language/en-GB/en-GB.plg_system_socialmagick.sys.ini
+++ b/language/en-GB/en-GB.plg_system_socialmagick.sys.ini
@@ -7,6 +7,18 @@ PLG_SYSTEM_SOCIALMAGICK_XML_DESC="Automatically generate Open Graph images for y
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_DEVMODE_LABEL="Development Mode"
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_DEVMODE_DESC="Enable development mode to regenerate images on every page load. Disable and if an image is already created, it will not be recreated."
 
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_LIBRARY_LABEL="Image library"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_LIBRARY_DESC="Choose which PHP image library to use. <code>Auto-detect</code> uses Imagick if available, falls back to GD if not. <code>ImageMagick</code> uses the imagick PHP extension (faster, you may have to ask your host to install or enable). <code>GD</code> uses the PHP gd extension (slower, installed on most servers). If your selected library is not available no images will be generated."
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_LIBRARY_AUTO="Auto-detect"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_LIBRARY_IMAGICK="ImageMagick"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_LIBRARY_GD="GD"
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXTDEBUG_LABEL="Debug text layout"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXTDEBUG_DESC="Renders the text bounding box on the image, according to your text rendering options. This helps you understand how the text ended up where it is. You should only use it on development and/or staging servers!"
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_QUALITY_LABEL="PNG Compression level"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_QUALITY_DESC="Controls the compression of the generated PNG images. Higher numbers give smaller files, sacrificing some speed. There is <strong>no</strong> loss in image quality. Recommended setting: 95"
+
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_OUTPUT_FOLDER_LABEL="Generated images directory"
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_OUTPUT_FOLDER_DESC="A folder name relative to your site's root where the generated images will be stored. It will be created if it doesn't exist. The folder's contents <em>must</em> be accessible over the web. As a result it's strongly recommended that you use a subdirectory of the <code>images</code> or <code>media</code> folder. Do <strong>NOT</strong> use a subdirectory of your site's temporary (<code>tmp</code>) or cache folders; these folders are not meant to be accessible over the web. If unsure, leave blank to use the default location <code>images/og_generated</code>."
 
