Add "keep us caffeinated" button to plugin settings
Close gh-12

--- a/language/en-GB/en-GB.plg_system_socialmagick.sys.ini
+++ b/language/en-GB/en-GB.plg_system_socialmagick.sys.ini
@@ -4,6 +4,8 @@ PLG_SYSTEM_SOCIALMAGICK_XML_DESC="Automatically generate Open Graph images for y
 ;; =====================================================================================================================
 ;; Plugin configuration options
 ;; =====================================================================================================================
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_BYMEACOFFEE="<span style='margin-left: 1em'>Did this save you time? </span><a class='btn btn-secondary' href='https://www.buymeacoffee.com/lucidfox' target='_blank'>☕️ Buy me a cappuccino!</a>"
+
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_DEVMODE_LABEL="Development Mode"
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_DEVMODE_DESC="Enable development mode to regenerate images on every page load. Disable and if an image is already created, it will not be recreated."
 
