Spelling errors in en-GB language strings

--- a/language/en-GB/en-GB.plg_system_socialmagick.sys.ini
+++ b/language/en-GB/en-GB.plg_system_socialmagick.sys.ini
@@ -36,10 +36,10 @@ PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEMPLATE_W_DESC="The width of your Open Graph ima
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEMPLATE_H_LABEL="Template height (in pixels)"
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEMPLATE_H_DESC="The height of your Open Graph image template."
 
-PLG_SYSTEM_SOCIALMAGICK_CONFIG_BASE_COLOR_LABEL="Base background color"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_BASE_COLOR_LABEL="Base background colour"
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_BASE_COLOR_DESC="Used as the background if you have no base image specified."
 
-PLG_SYSTEM_SOCIALMAGICK_CONFIG_BASE_COLOR_ALPHA_LABEL="Background color opacity"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_BASE_COLOR_ALPHA_LABEL="Background colour opacity"
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_BASE_COLOR_ALPHA_DESC="From transparent (left) to totally opaque (right)"
 
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_FONT_LABEL="Font for text"
@@ -48,8 +48,8 @@ PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_FONT_DESC="Choose the font file for your tex
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_FONT_SIZE_LABEL="Font size (in points)"
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_FONT_SIZE_DESC="The font size for rendering the text in the Open Graph image."
 
-PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_COLOR_LABEL="Text color"
-PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_COLOR_DESC="The color of the text in the Open Graph image."
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_COLOR_LABEL="Text colour"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_COLOR_DESC="The colour of the text in the Open Graph image."
 
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_HEIGHT_LABEL="Maximum Text Height (px)"
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_HEIGHT_DESC="The rendered text in the Open Graph image will never higher than this many pixels."
