Added: Support for `socialMagickImage` application property to override the image to use in the template.

--- a/language/en-GB/en-GB.plg_system_socialmagick.ini
+++ b/language/en-GB/en-GB.plg_system_socialmagick.ini
@@ -22,7 +22,7 @@ PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_USE_TITLE_LABEL="Use Browser Page Title"
 PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_USE_TITLE_DESC="Should I use the Browser Page Title (see the Page Display tab) as a text source per the rules outlined on this page?"
 
 PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_IMAGE_SOURCE_LABEL="Extra image source"
-PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_IMAGE_SOURCE_DESC="Only applies to Joomla! core content categories and articles. Choose where we can look for an image to use as a layered image when generating the Open Graph image. It can be the intro or full article image, or a custom field (strongly suggested that it is of the Media type). In the latter case you also need to enter the name of the field. Use None to turn off this feature."
+PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_IMAGE_SOURCE_DESC="Only applies to Joomla! core content categories and articles. Choose where we can look for an image to use as a layered image when generating the Open Graph image. It can be the intro or full article image, or a custom field (strongly suggested that it is of the Media type). In the latter case you also need to enter the name of the field. Use None to turn off this feature. Any setting here will be overridden by setting <code>Joomla\CMS\Factory::getApplication()->socialMagickImage = '/relative/path/to/image.jpg'</code>"
 PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_IMAGE_SOURCE_OPT_NONE="None"
 PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_IMAGE_SOURCE_OPT_INTRO="Intro Image"
 PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_IMAGE_SOURCE_OPT_FULLTEXT="Full Article Image"
