--- a/language/en-GB/en-GB.plg_system_socialmagick.ini
+++ b/language/en-GB/en-GB.plg_system_socialmagick.ini
@@ -8,9 +8,13 @@ PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_OVERRIDE_LABEL="Override menu item and paren
 
 PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_GENERATE_IMAGES_LABEL="Generate Open Graph images"
 PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_GENERATE_IMAGES_DESC="Should I generate Open Graph images automatically?"
+PLG_SYSTEM_SOCIALMAGICK_FORM_PLUGIN_GENERATE_IMAGES_LABEL="Generate Open Graph images by default"
+PLG_SYSTEM_SOCIALMAGICK_FORM_PLUGIN_GENERATE_IMAGES_DESC="Should I generate Open Graph images automatically? This option can be overridden in a menu item, category or article."
 
 PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_TEMPLATE_LABEL="Template"
 PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_TEMPLATE_DESC="The Open Graph image generation template to use."
+PLG_SYSTEM_SOCIALMAGICK_FORM_PLUGIN_TEMPLATE_LABEL="Default Template"
+PLG_SYSTEM_SOCIALMAGICK_FORM_PLUGIN_TEMPLATE_DESC="The Open Graph image generation template to use. You have to save the plugin before selecting a template you just created or renamed. This option can be overridden in a menu item, category or article."
 
 PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_CUSTOM_TEXT_LABEL="Custom Text"
 PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_CUSTOM_TEXT_DESC="Use this custom text as a text source per the rules outlined on this page? Empty (default) to not use this feature."
