Added: Options to set up additional OG tags gh-4
Option to add the OpenGraph property declaration in Advanced settings

--- a/language/en-GB/en-GB.plg_system_socialmagick.sys.ini
+++ b/language/en-GB/en-GB.plg_system_socialmagick.sys.ini
@@ -4,6 +4,9 @@ PLG_SYSTEM_SOCIALMAGICK_XML_DESC="Automatically generate Open Graph images for y
 ;; =====================================================================================================================
 ;; Plugin configuration options
 ;; =====================================================================================================================
+PLG_SYSTEM_SOCIALMAGICK_BASIC_FIELDSET_LABEL="Basic"
+PLG_SYSTEM_SOCIALMAGICK_ADVANCED_FIELDSET_LABEL="Advanced"
+
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_BYMEACOFFEE="<span style='margin-left: 1em'>Did this save you time? </span><a class='btn btn-secondary' href='https://www.buymeacoffee.com/lucidfox' target='_blank'>☕️ Buy me a cappuccino!</a>"
 
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_DEVMODE_LABEL="Development Mode"
@@ -103,3 +106,6 @@ PLG_SYSTEM_SOCIALMAGICK_CONFIG_IMAGE_X_DESC="The layer image will be rendered th
 
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_IMAGE_Y_LABEL="Image Position (pixels from top edge)"
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_IMAGE_Y_DESC="The layer image will be rendered this many pixels from the top edge of the generated image."
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_ADD_OG_DECLARATION_LABEL="Add OpenGraph property declaration"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_ADD_OG_DECLARATION_DESC="Should I add the OpenGraph property declaration to the <code>&lt;html&gt;</code> root node of the HTML output? Leave enabled unless you have a custom template or a third party extension which does that automatically. Even in this case it won't hurt leaving this enabled; if the declaration is already present it won't be duplicated (we check for it)."
