--- a/language/en-GB/en-GB.plg_system_socialmagick.sys.ini
+++ b/language/en-GB/en-GB.plg_system_socialmagick.sys.ini
@@ -45,6 +45,9 @@ PLG_SYSTEM_SOCIALMAGICK_CONFIG_BASE_COLOR_DESC="Used as the background if you ha
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_BASE_COLOR_ALPHA_LABEL="Background colour opacity"
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_BASE_COLOR_ALPHA_DESC="From transparent (left) to totally opaque (right)"
 
+PLG_SYSTEM_SOCIALMAGICK_FORM_PLUGIN_OVERLAY_TEXT_LABEL="Overlay text"
+PLG_SYSTEM_SOCIALMAGICK_FORM_PLUGIN_OVERLAY_TEXT_DESC="Enable to overlay a large caption on the generated image. This is the default. Disable if you are using a base image with transparency and want it combined with a category's / article's image without further text overlayed on the image OR if you want to use a precomposed, static image as a common share image for all pages under a menu item."
+
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_FONT_LABEL="Font for text"
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_FONT_DESC="Choose the font file for your text. Upload your font files into the <code>plugins/system/socialmagick/fonts</code> directory on your site."
 
