Add options to add other OG tags gh-4
Plugin-level options

--- a/language/en-GB/en-GB.plg_system_socialmagick.sys.ini
+++ b/language/en-GB/en-GB.plg_system_socialmagick.sys.ini
@@ -112,3 +112,47 @@ PLG_SYSTEM_SOCIALMAGICK_CONFIG_IMAGE_Y_DESC="The layer image will be rendered th
 
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_ADD_OG_DECLARATION_LABEL="Add OpenGraph property declaration"
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_ADD_OG_DECLARATION_DESC="Should I add the OpenGraph property declaration to the <code>&lt;html&gt;</code> root node of the HTML output? Leave enabled unless you have a custom template or a third party extension which does that automatically. Even in this case it won't hurt leaving this enabled; if the declaration is already present it won't be duplicated (we check for it)."
+
+PLG_SYSTEM_SOCIALMAGICK_OGTAGS_FIELDSET_LABEL="Open Graph tags"
+PLG_SYSTEM_SOCIALMAGICK_OGTAGS_FIELDSET_DESC="Define the default values for additional Open Graph tags. If these are set by another extension or your template they will <strong>not</strong> be overwritten. The defaults are defined in the plugin configuration. They can be overridden in each menu item, category and article."
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_TITLE_LABEL="Open Graph Title"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_TITLE_DESC="Should we set the <code>og:title</code> property? This communicates the title of the current page."
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_TITLE_OPT_NO="No"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_TITLE_OPT_JOOMLA="Use Joomla's page title"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_TITLE_OPT_CUSTOM="Use a custom title"
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_TITLE_CUSTOM_LABEL="Custom Open Graph Title"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_TITLE_CUSTOM_DESC="Override the Open Graph Title for the page."
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_DESCRIPTION_LABEL="Open Graph Description"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_DESCRIPTION_DESC="Should we set the <code>og:description</code> property? This communicates the meta description of the current page."
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_DESCRIPTION_OPT_NO="No"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_DESCRIPTION_OPT_JOOMLA="Use Joomla's meta description"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_DESCRIPTION_OPT_CUSTOM="Use a custom description"
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_DESCRIPTION_CUSTOM_LABEL="Custom Open Graph Description"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_DESCRIPTION_CUSTOM_DESC="Override the Open Graph description for the page."
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_URL_LABEL="Open Graph URL"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_URL_DESC="Should we set the <code>og:url</code> property? This communicates the canonical URL of the current page."
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_SITE_NAME_LABEL="Open Graph Site Name"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_OG_SITE_NAME_DESC="Should we set the <code>og:site_name</code> property? This communicates the name of the site the current page belongs to."
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TWITTER_CARD_LABEL="Twitter Card type"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TWITTER_CARD_DESC="Set the sharing card type on Twitter. Summary shows the page title, description and a small thumbnail. Summary with Large Image is similar but uses a larger, prominent version of your page's social share image. If you use None Twitter will show its default preview which <em>may</em> include a preview image. Using either card type requires that your page has an <code>og:image</code> property set either by this plugin or by a third party extension, otherwise it has no effect."
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TWITTER_CARD_OPT_NONE="None"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TWITTER_CARD_OPT_SUMMARY="Summary"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TWITTER_CARD_OPT_SUMMARY_LARGE="Summary with Large Image"
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TWITTER_SITE_LABEL="Twitter site handle"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TWITTER_SITE_DESC="The Twitter handle used by your site, including the @ sign in front."
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TWITTER_CREATOR_LABEL="Twitter creator handle"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TWITTER_CREATOR_DESC="The default Twitter handle which will be attributed as the content creator. Generally recommended to only set this in articles."
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_FB_APP_ID_LABEL="Facebook App ID"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_FB_APP_ID_DESC="If your site is using a Facebook app, e.g. for social login, you are recommended to enter the Facebook App ID here so that Facebook can attribute the links of your site to that Facebook app. If you have no idea what this is you can safely omit it."
