Distribute the generated files in subdirectories.
Close gh-22

--- a/language/en-GB/en-GB.plg_system_socialmagick.sys.ini
+++ b/language/en-GB/en-GB.plg_system_socialmagick.sys.ini
@@ -27,6 +27,9 @@ PLG_SYSTEM_SOCIALMAGICK_CONFIG_QUALITY_DESC="Controls the compression of the gen
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_OUTPUT_FOLDER_LABEL="Generated images directory"
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_OUTPUT_FOLDER_DESC="A folder name relative to your site's root where the generated images will be stored. It will be created if it doesn't exist. The folder's contents <em>must</em> be accessible over the web. As a result it's strongly recommended that you use a subdirectory of the <code>images</code> or <code>media</code> folder. Do <strong>NOT</strong> use a subdirectory of your site's temporary (<code>tmp</code>) or cache folders; these folders are not meant to be accessible over the web. If unsure, leave blank to use the default location <code>images/og_generated</code>."
 
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_FOLDER_LEVELS_LABEL="Subfolder levels"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_FOLDER_LEVELS_DESC="Social Magick can optionally distribute its generated images in up to 256 subdirectories per level to optimize performance on large sites. Choose the number of nested subdirectory levels. Default is 0, no subdirectories. 1 level is enough for sites with up to 500.000 unique pages. 2 levels are enough for massive sites with hundreds of millions of pages."
+
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEMPLATE_NAME_LABEL="Template Name (Alphanumeric)"
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEMPLATE_NAME_DESC="Give a name to your template. You will see it wherever you are allowed to select an Open Graph image template (categories, menu items). Each template needs to have its own, unique template name."
 
