Change the labels of the adjustment options to use the work "nudge"

--- a/language/en-GB/en-GB.plg_system_socialmagick.sys.ini
+++ b/language/en-GB/en-GB.plg_system_socialmagick.sys.ini
@@ -75,19 +75,19 @@ PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_ALIGN_OPT_RIGHT="Right"
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_Y_CENTER_LABEL="Centre text vertically?"
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_Y_CENTER_DESC="Should the text be rendered centred vertically within the containment box defined by the options above?"
 
-PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_Y_ADJUST_LABEL="Adjust Position Vertically from Centre (px)"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_Y_ADJUST_LABEL="Nudge Vertically from Centre (px)"
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_Y_ADJUST_DESC="Move the text down by this many pixels. To move the text up, use negative values."
 
-PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_Y_ABSOLUTE_LABEL="Adjust Position Vertically from Top (px)"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_Y_ABSOLUTE_LABEL="Pixels from the Top"
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_Y_ABSOLUTE_DESC="Move the text down by this many pixels. To move the text up, use negative values."
 
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_X_CENTER_LABEL="Centre text horizontally?"
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_X_CENTER_DESC="Should the text be rendered centred horizontally within the containment box defined by the options above?"
 
-PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_X_ADJUST_LABEL="Adjust Position Horizontally from Centre (px)"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_X_ADJUST_LABEL="Nudge Horizontally from Centre (px)"
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_X_ADJUST_DESC="Move the text right by this many pixels. To move the text left, use negative values."
 
-PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_X_ABSOLUTE_LABEL="Adjust Position Horizontally from Left Edge (px)"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_X_ABSOLUTE_LABEL="Pixels from Left Edge"
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXT_X_ABSOLUTE_DESC="Move the text right by this many pixels. To move the text left, use negative values."
 
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_USE_ARTICLE_IMAGE_LABEL="Layer an image with the template?"
