Added: Auto-delete old images
Close gh-7

--- a/language/en-GB/en-GB.plg_system_socialmagick.sys.ini
+++ b/language/en-GB/en-GB.plg_system_socialmagick.sys.ini
@@ -159,3 +159,18 @@ PLG_SYSTEM_SOCIALMAGICK_CONFIG_TWITTER_CREATOR_DESC="The default Twitter handle 
 
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_FB_APP_ID_LABEL="Facebook App ID"
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_FB_APP_ID_DESC="If your site is using a Facebook app, e.g. for social login, you are recommended to enter the Facebook App ID here so that Facebook can attribute the links of your site to that Facebook app. If you have no idea what this is you can safely omit it."
+
+PLG_SYSTEM_SOCIALMAGICK_OLDIMAGES_FIELDSET_LABEL="Old Images"
+PLG_SYSTEM_SOCIALMAGICK_OLDIMAGES_FIELDSET_DESC="Social Magick can automatically remove auto-generated images if they have not been used for a while. You can define when an image should be deleted and whether you want this to happen automatically. You can trigger this deletion from a CRON job using the URL https://www.example.com/index.php?option=com_ajax&folder=system&plugin=socialmagick&format=raw&key=my_key where https://www.example.com is the URL to your site and my_key is the CRON URL Key defined below. If the CRON URL Key is empty you can not use the URL to trigger a scheduled image deletion."
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_OLD_IMAGES_AFTER_LABEL="Old image threshold, in days"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_OLD_IMAGES_AFTER_DESC="Images which were last used this many days ago are considered “old” and will be deleted by this feature."
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_ADD_PSEUDO_CRON_LABEL="Automatic deletion of old images"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_ADD_PSEUDO_CRON_DESC="Old images will be automatically deleted. Automatic image deletion takes place whenever Social Magick is asked to attach an Open Graph image but the image already exists. This can be <strong>very</strong> resource intensive on big and/or busy sites. For these sites you are recommended to disable this feature and use a CRON job with the URL provided above."
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_CRON_URL_KEY_LABEL="CRON URL Key"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_CRON_URL_KEY_DESC="If you want to automate image deletion without slowing down your site you can do so by accessing a special “CRON URL”. However, this could be abused by someone trying to access this URL repeatedly, in high frequency. To prevent abuse, the CRON URL is locked by a key. Provide the key here. Use lowercase and uppercase English letters a-z, numbers 0-9, dashes and underscores only, please. Keep it between 16 and 80 characters long. Idea: use Random.org's Password Generator feature to create and combine three 24 character truly random passwords to create a very good quality key."
+
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_CRON_MAX_EXEC_LABEL="CRON maximum Execution time, in seconds"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_CRON_MAX_EXEC_DESC="The CRON URL will run up to this many seconds (+/- 2 seconds). Change this if your server has a lower maximum PHP execution time limit. If your server does not have such a limit (it is shown as 0) use a maximum value of 120 seconds to avoid your web server timing out before PHP. Recommended values: 10, 20, 30, or 60 depending on your server."
