Fix: Joomla 4, cannot get the intro or full image, Joomla changed the internal structure of the image URLs again.
Close gh-33

--- a/language/en-GB/en-GB.plg_system_socialmagick.sys.ini
+++ b/language/en-GB/en-GB.plg_system_socialmagick.sys.ini
@@ -21,6 +21,10 @@ PLG_SYSTEM_SOCIALMAGICK_CONFIG_LIBRARY_GD="GD"
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXTDEBUG_LABEL="Debug text layout"
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_TEXTDEBUG_DESC="Renders the text bounding box on the image, according to your text rendering options. This helps you understand how the text ended up where it is. You should only use it on development and/or staging servers!"
 
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_DEBUGLINK_LABEL="Debug link"
+PLG_SYSTEM_SOCIALMAGICK_CONFIG_DEBUGLINK_DESC="Show a link to the generated OpenGraph image. Helps when setting up the plugin as you don't have to view source to find the image link."
+PLG_SYSTEM_SOCIALMAGICK_DEBUGLINK_MESSAGE="<a href=\"%s\" target=\"_blank\">Preview OpenGraph Image</a>"
+
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_QUALITY_LABEL="PNG Compression level"
 PLG_SYSTEM_SOCIALMAGICK_CONFIG_QUALITY_DESC="Controls the compression of the generated PNG images. Higher numbers give smaller files, sacrificing some speed. There is <strong>no</strong> loss in image quality. Recommended setting: 95"
 
