Fix: Template drop-down is disabled after installation
Close gh-39

--- a/language/en-GB/en-GB.plg_system_socialmagick.ini
+++ b/language/en-GB/en-GB.plg_system_socialmagick.ini
@@ -15,6 +15,7 @@ PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_TEMPLATE_LABEL="Template"
 PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_TEMPLATE_DESC="The Open Graph image generation template to use."
 PLG_SYSTEM_SOCIALMAGICK_FORM_PLUGIN_TEMPLATE_LABEL="Default Template"
 PLG_SYSTEM_SOCIALMAGICK_FORM_PLUGIN_TEMPLATE_DESC="The Open Graph image generation template to use. You have to save the plugin before selecting a template you just created or renamed. This option can be overridden in a menu item, category or article."
+PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_TEMPLATE_DISABLED="🚨 Status => Enabled, click Save to enable 🚨"
 
 PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_CUSTOM_TEXT_LABEL="Custom Text"
 PLG_SYSTEM_SOCIALMAGICK_FORM_COMMON_CUSTOM_TEXT_DESC="Use this custom text as a text source per the rules outlined on this page? Empty (default) to not use this feature."
